// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Select Basic Usage 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"position: relative\\">
  <select color=\\"white\\" class=\\"drac-select drac-select-white\\">
    <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
    <option>Blade</option>
    <option>Buffy</option>
    <option>Lincoln</option>
    <option>Morbius</option>
    <option>Van Helsing</option>
  </select>
  <div class=\\"drac-select-arrow drac-text-white\\">
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      role=\\"presentation\\"
      aria-hidden=\\"true\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
      ></path>
    </svg>
  </div>
</div>
",
  "react": "<Select defaultValue=\\"default\\" color=\\"white\\">
  <option value=\\"default\\" disabled={true}>
    Select option
  </option>
  <option>Blade</option>
  <option>Buffy</option>
  <option>Lincoln</option>
  <option>Morbius</option>
  <option>Van Helsing</option>
</Select>;
",
  "title": "Usage",
}
`;

exports[`Site: Select Colors 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column; padding: 3rem\\">
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"white\\"
        class=\\"drac-select drac-select-outline drac-select-white\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"cyan\\"
        class=\\"drac-select drac-select-outline drac-select-cyan\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-cyan\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"green\\"
        class=\\"drac-select drac-select-outline drac-select-green\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-green\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"orange\\"
        class=\\"drac-select drac-select-outline drac-select-orange\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-orange\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"pink\\"
        class=\\"drac-select drac-select-outline drac-select-pink\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-pink\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"purple\\"
        class=\\"drac-select drac-select-outline drac-select-purple\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-purple\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"red\\"
        class=\\"drac-select drac-select-outline drac-select-red\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-red\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"yellow\\"
        class=\\"drac-select drac-select-outline drac-select-yellow\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-yellow\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"animated\\"
        class=\\"drac-select drac-select-outline\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-animated\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"cyanGreen\\"
        class=\\"drac-select drac-select-outline\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-cyanGreen\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"pinkPurple\\"
        class=\\"drac-select drac-select-outline\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-pinkPurple\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"purpleCyan\\"
        class=\\"drac-select drac-select-outline\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-purpleCyan\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"yellowPink\\"
        class=\\"drac-select drac-select-outline\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-yellowPink\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"normal\\"
        color=\\"white\\"
        class=\\"drac-select drac-select-white\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"normal\\"
        color=\\"cyan\\"
        class=\\"drac-select drac-select-cyan\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-cyan\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"normal\\"
        color=\\"green\\"
        class=\\"drac-select drac-select-green\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-green\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"normal\\"
        color=\\"orange\\"
        class=\\"drac-select drac-select-orange\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-orange\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"normal\\"
        color=\\"pink\\"
        class=\\"drac-select drac-select-pink\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-pink\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"normal\\"
        color=\\"purple\\"
        class=\\"drac-select drac-select-purple\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-purple\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select variant=\\"normal\\" color=\\"red\\" class=\\"drac-select drac-select-red\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-red\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"normal\\"
        color=\\"yellow\\"
        class=\\"drac-select drac-select-yellow\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-yellow\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select variant=\\"normal\\" color=\\"animated\\" class=\\"drac-select\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-animated\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select variant=\\"normal\\" color=\\"cyanGreen\\" class=\\"drac-select\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-cyanGreen\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select variant=\\"normal\\" color=\\"pinkPurple\\" class=\\"drac-select\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-pinkPurple\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select variant=\\"normal\\" color=\\"purpleCyan\\" class=\\"drac-select\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-purpleCyan\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select variant=\\"normal\\" color=\\"yellowPink\\" class=\\"drac-select\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-yellowPink\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\", padding: \\"3rem\\" }}>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"cyan\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"green\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"orange\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"pink\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"purple\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"red\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"yellow\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"animated\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"cyanGreen\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"pinkPurple\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"purpleCyan\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"yellowPink\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"cyan\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"green\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"orange\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"pink\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"purple\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"red\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"yellow\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"animated\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"cyanGreen\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"pinkPurple\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"purpleCyan\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"yellowPink\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
</div>;
",
  "title": "Colors",
}
`;

exports[`Site: Select Disabled 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column; padding: 3rem\\">
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        disabled=\\"\\"
        variant=\\"normal\\"
        color=\\"white\\"
        class=\\"drac-select drac-select-white\\"
      >
        <option value=\\"default\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        disabled=\\"\\"
        variant=\\"outline\\"
        color=\\"white\\"
        class=\\"drac-select drac-select-outline drac-select-white\\"
      >
        <option value=\\"default\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\", padding: \\"3rem\\" }}>
  <div style={{ marginBottom: 10 }}>
    <Select disabled={true} variant=\\"normal\\" color=\\"white\\">
      <option value=\\"default\\">Select option</option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select disabled={true} variant=\\"outline\\" color=\\"white\\">
      <option value=\\"default\\">Select option</option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
</div>;
",
  "title": "Disabled",
}
`;

exports[`Site: Select Sizes 1`] = `
Object {
  "docs": "",
  "html": "<div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        color=\\"white\\"
        class=\\"drac-select drac-select-lg drac-select-white\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select color=\\"white\\" class=\\"drac-select drac-select-white\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        color=\\"white\\"
        class=\\"drac-select drac-select-sm drac-select-white\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
</div>
",
  "react": "<div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" size=\\"large\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" size=\\"medium\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" size=\\"small\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
</div>;
",
  "title": "Sizes",
}
`;

exports[`Site: Select Variants 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column; padding: 3rem\\">
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"normal\\"
        color=\\"white\\"
        class=\\"drac-select drac-select-white\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select
        variant=\\"outline\\"
        color=\\"white\\"
        class=\\"drac-select drac-select-outline drac-select-white\\"
      >
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\", padding: \\"3rem\\" }}>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
</div>;
",
  "title": "Variants",
}
`;
